--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,12 @@
 	flex-wrap:wrap;
 	justify-content:space-between;
 }
+.item-1{
+	background-color:green;
+}
+.item-2{
+	background-color:red;
+}
+.item-3{
+	background-color:blue;
+}
